--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+`html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -77,7 +78,7 @@
                 return;
             }
 
-            const accessToken = 'sl.B-yHOrf0qQUPdiSrUvk2EgHaOm3-i61SyQLGJT6u0Lk0MOXYCGZ3MncWWoUV596Kuy6TyvWnTp3rUj5RE79IaV15eY2vn9caixiUOzSZAxOZ2i1HenZiTwOajNnuutw9G3NtTnlwLysD';
+            const accessToken = 'sl.B-z-qI3esAsa4Z9d_tuoiZ8OtdI_gQQPUtx7RRUG6eEFcYxLfxrCjt_1WdnI_ulp9tCxnjkUcGM2_jVfBkiLJEMbrgvMmN_3wKg3ZPeg32-CsaauQpCiUYqWQ3xXvlfQvyN7o5z5BOAi';
 
             const url = 'https://content.dropboxapi.com/2/files/upload';
             const headers = {
@@ -113,3 +114,4 @@
 
 </body>
 </html>
+```
